    <string name="activation_code">激活码：</string>
    <string name="baidutieba">百度贴吧</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="bluetooth">蓝牙</string>
    <string name="cancel">取消</string>
    <string name="cdk_expired_date">有效期：%1$s</string>
    <string name="cdk_propotion">%1$s</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="comment_item_content_1">%1$s : %2$s</string>
    <string name="comment_item_content_2">%1$s回复%2$s : %3$s</string>
    <string name="comment_item_content_more">查看更多%1$d条回复...</string>
    <string name="comment_item_floor">第%1$d楼</string>
    <string name="comment_item_floor_1st">沙发</string>
    <string name="comment_item_floor_2nd">板凳</string>
    <string name="douban">豆瓣</string>
    <string name="dropbox">Dropbox</string>
    <string name="email">邮件</string>
    <string name="evernote">印象笔记</string>
    <string name="f_comment_content_1">%1$s : %2$s</string>
    <string name="f_comment_content_2">%1$s回复%2$s : %3$s</string>
    <string name="f_comment_content_more">查看更多%1$d条回复...</string>
    <string name="f_floor">第%1$d楼</string>
    <string name="f_floor_1st">沙发</string>
    <string name="f_floor_2nd">板凳</string>
    <string name="facebook">Facebook</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="finish">完成</string>
    <string name="flickr">Flickr</string>
    <string name="forum_post_best_fail">帖子加精失败</string>
    <string name="forum_post_best_success">帖子已加精</string>
    <string name="forum_post_debest_success">帖子已取消加精</string>
    <string name="forum_post_defavorite_success">帖子已取消收藏</string>
    <string name="forum_post_favorite_fail">帖子收藏失败</string>
    <string name="forum_post_favorite_success">帖子已收藏</string>
    <string name="forum_post_report_fail">帖子举报失败</string>
    <string name="forum_post_report_success">帖子已举报</string>
    <string name="forum_t_member_fragment_member_desc">%1$s加入%2$s</string>
    <string name="forum_t_member_fragment_members_title">关注的人（%1$s）</string>
    <string name="forum_t_member_fragment_no_more_moderators">版主招募中，请加入啪友汇QQ群（ 137320879）进行申请</string>
    <string name="forum_user_login_invalid">用户验证失效，请重新登录！</string>
    <string name="forum_user_not_login">尚未登录，请先登录！</string>
    <string name="foursquare">FourSquare</string>
    <string name="gdtslogan">GDTslogan</string>
    <string name="gift_tip">移步至悟饭游戏厅，专享礼包等你拿，VIP就是你</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="googleplus">Google+</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapaper_pwd">密码</string>
    <string name="kaixin">开心网</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="laiwang">来往</string>
    <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="laiwangmoments">来往动态</string>
    <string name="line">Line</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="linkedin">领英</string>
    <string name="list_friends">%s的朋友</string>
    <string name="login_dsc">正在登录...</string>
    <string name="mingdao">明道</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="multi_share">图文分享</string>
    <string name="my_cdk_count">我的礼包箱（%1$s）</string>
    <string name="net_connect_failed">网络连接异常，请检查网络连接</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="papaName">悟饭</string>
    <string name="pinterest">Pinterest</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="pocket">Pocket</string>
    <string name="profile_message_item_content_comment">回复 : %1$s</string>
    <string name="profile_message_item_content_praise">%1$s</string>
    <string name="profile_message_item_content_reply">回复%1$s : %2$s</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="qq">QQ</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="qzone">QQ空间</string>
    <string name="receive_cdk_button1">领取</string>
    <string name="receive_cdk_button2">点击领取礼包</string>
    <string name="receive_cdk_button3">点击领取悟饭专属礼包</string>
    <string name="receive_cdk_button4">使用铜板兑换礼包</string>
    <string name="receive_cdk_button5">该礼包已被领完</string>
    <string name="receive_cdk_count">目前已领取%1$s款礼包</string>
    <string name="receive_cdk_tip">点击右侧按钮领取礼包码</string>
    <string name="refreshing">刷新中…</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="renren">人人网</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="share">分享</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_completed">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_posts_myremain_help_money">您可用铜板：%1$s</string>
    <string name="share_posts_nomore_help_money">您的铜板不足！</string>
    <string name="share_to">分享到</string>
    <string name="share_to_baidutieba">分享到百度贴吧</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="shortmessage">信息</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="tourist_tip">"您的账号为游客账号，完善账号
后才能发帖！"</string>
    <string name="tumblr">Tumblr</string>
    <string name="twitter">Twitter</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="vkontakte">VK</string>
    <string name="website">http://www.mob.com</string>
    <string name="wechat">微信好友</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_nomore">亲，到底了</string>
    <string name="yixin">易信</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="youdao">有道云笔记</string>
